# 42_formatter_rust

./: .clang-format  .gitignore  Cargo.toml  README-en.md  README.md  github  github.pub  libft.h  output.winget
.github/workflows/: rust.yml
src/: brace_should_eol.rs  c_parser.rs  insert_newline_between_func.rs  main.rs  no_args_void.rs  preprocessor_indent.rs  replace_tab_before_func.rs  return_parenthesis.rs  space_after_kw.rs  space_replace_tab_indent.rs  test_util.rs  util.rs
test/: all_syntax
test/newline_between_func/: default1.c  default1_expected.c  with_comment.c  with_comment_expected.c
test/replace_tab_before_func/: 0.c  expected_0.c
test/return_parenthesis/: expected_0.c
test/space_after_kw/: 0.c  expected_0.c
test/space_before_func/: 0.c  expected_0.c
test/space_replace_tab_indent/: expected_0.c
